--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,152 @@
 @import "./reset.css";
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@600;700&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap');
 
-body{
-  font-family: 'Raleway', sans-serif;
-  font-family: 'Roboto Condensed', sans-serif;
+/* font-family: 'Raleway', sans-serif; */
+/* font-family: 'Roboto Condensed', sans-serif; */
+
+:root {
+  --container-width: 1230px;
+  --container-padding: 15px;
+  --title-color:#01353E;
+  --active-color:#00B2A0;
+  --text-color:#242121;
+
 }
+
+body{
+  margin: auto;
+  width: 1920px;;
+  background-color: #FFFFFF;
+  color: var(--text-color);
+}
+
+.none {
+  display: none !important;
+}
+.container {
+  max-width: var(--container-width);
+  margin: 0 auto;
+  padding: 0 var(--container-padding);
+}
+
+
+/* Haeder */
+.header{
+  position: relative;
+  min-height: 1080px;
+  padding-top: 34px;
+
+  background-image: url("./../img/header/header-back.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+
+  }
+
+.header .header__top{
+  margin-bottom: 243px;
+}
+
+.header .header__content{
+  display: flex;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.header::before{
+  content: "";
+  width: 1920px;
+  height: 495px;
+  background: linear-gradient(180deg, #01353E 0%, rgba(51, 51, 51, 0.595076) 31.64%, rgba(51, 51, 51, 0.222586) 74.35%, rgba(51, 51, 51, 0) 99.87%);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+/* Nav */
+.nav{
+  position: relative;
+  display: flex;
+  column-gap: 185px;
+  justify-content: center;
+  align-items: center;
+
+  color: #FFFFFF;
+}
+.nav a{
+  color: inherit;
+}
+
+.nav .nav__logo{
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.nav .nav__list{
+  min-height: 63px;
+
+  font-family: 'Roboto Condensed', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    letter-spacing: 0.6px;
+
+  display: flex;
+    column-gap: 45px;
+    align-items: center;
+    justify-content: center;
+    
+}
+.nav .nav__list a{
+  position: relative;
+}
+/* .nav .nav__list a.active::after, */
+.nav .nav__list a:hover::after{
+  content: "";
+
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  bottom: -10px;
+
+  display: block;
+
+  height: 1px;
+  background-color: var(--active-color);
+}
+/* Content */
+
+.header__title{
+    color: var(--title-color);
+  font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 200px;
+    letter-spacing: 0.6px;
+
+}
+
+.header__text p {
+  color: var(--text-color);
+  font-family: 'Roboto Condensed', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    letter-spacing: 0.6px;
+
+}
+/* Button */
+.header__button{
+    position: absolute;
+    left: 940px;
+    top: 918px;
+
+}
+.header__button:hover{
+  top: 930px;
+  transition: color 0.2s ease-in;
+}
+
+
+
