--- a/css/main.css
+++ b/css/main.css
@@ -2,27 +2,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@600;700&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap');
 
 /* font-family: 'Raleway', sans-serif; */
-/* font-family: 'Roboto Condensed', sans-serif; */
 
 :root {
   --container-width: 1230px;
   --container-padding: 15px;
-  --title-color:#01353E;
-  --active-color:#00B2A0;
-  --text-color:#242121;
+  --title-color: #01353E;
+  --active-color: #00B2A0;
+  --text-color: #242121;
 
 }
 
-body{
+body {
+
+  font-family: 'Roboto Condensed', sans-serif;
   margin: auto;
-  width: 1920px;;
+  width: 1920px;
+  ;
   background-color: #FFFFFF;
   color: var(--text-color);
 }
 
+
 .none {
   display: none !important;
 }
+
 .container {
   max-width: var(--container-width);
   margin: 0 auto;
@@ -31,42 +35,45 @@ body{
 
 
 /* Haeder */
-.header{
+.header {
   position: relative;
   min-height: 1080px;
   padding-top: 34px;
+  margin-bottom: 200px;
 
   background-image: url("./../img/header/header-back.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
 
-  }
+}
 
-.header .header__top{
+.header .header__top {
   margin-bottom: 243px;
 }
 
-.header .header__content{
+.header .header__content {
   display: flex;
-    margin: auto;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.header::before{
+.header::before {
   content: "";
   width: 1920px;
   height: 495px;
+
   background: linear-gradient(180deg, #01353E 0%, rgba(51, 51, 51, 0.595076) 31.64%, rgba(51, 51, 51, 0.222586) 74.35%, rgba(51, 51, 51, 0) 99.87%);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    position: absolute;
-    left: 0;
-    top: 0;
+
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 
 /* Nav */
-.nav{
+.nav {
   position: relative;
   display: flex;
   column-gap: 185px;
@@ -75,35 +82,39 @@ body{
 
   color: #FFFFFF;
 }
-.nav a{
+
+.nav a {
   color: inherit;
 }
 
-.nav .nav__logo{
+.nav .nav__logo {
   position: absolute;
   top: 0;
   left: 0;
 }
-.nav .nav__list{
+
+.nav .nav__list {
   min-height: 63px;
 
-  font-family: 'Roboto Condensed', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    letter-spacing: 0.6px;
+
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  letter-spacing: 0.6px;
 
   display: flex;
-    column-gap: 45px;
-    align-items: center;
-    justify-content: center;
-    
+  column-gap: 45px;
+  align-items: center;
+  justify-content: center;
+
 }
-.nav .nav__list a{
+
+.nav .nav__list a {
   position: relative;
 }
-/* .nav .nav__list a.active::after, */
-.nav .nav__list a:hover::after{
+
+.nav .nav__list a.active::after,
+.nav .nav__list a:hover::after {
   content: "";
 
   position: absolute;
@@ -116,36 +127,724 @@ body{
   height: 1px;
   background-color: var(--active-color);
 }
+
 /* Content */
 
-.header__title{
-    color: var(--title-color);
+.header__title {
+  color: var(--title-color);
   font-family: 'Raleway';
-    font-weight: 700;
-    font-size: 200px;
-    letter-spacing: 0.6px;
+  font-weight: 700;
+  font-size: 200px;
+  letter-spacing: 0.6px;
 
 }
 
 .header__text p {
   color: var(--text-color);
-  font-family: 'Roboto Condensed', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    letter-spacing: 0.6px;
+
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  letter-spacing: 0.6px;
 
 }
+
 /* Button */
-.header__button{
-    position: absolute;
-    left: 940px;
-    top: 918px;
+.header__button {
+  position: absolute;
+  left: 940px;
+  top: 918px;
 
 }
-.header__button:hover{
+
+.header__button:hover {
   top: 930px;
   transition: color 0.2s ease-in;
+}
+
+/* Main */
+.section__about {
+  margin-bottom: 200px;
+}
+
+.about__content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.section__title {
+  margin: 0 auto 100px;
+  color: var(--title-color);
+  font-family: 'Raleway';
+  text-transform: uppercase;
+  text-align: center;
+  font-style: normal;
+  line-height: 56px;
+  font-weight: 600;
+  font-size: 48px;
+  letter-spacing: 0.6px;
+  position: relative;
+
+
+
+
+}
+
+.section__title::after {
+
+  content: "";
+  width: 45px;
+  height: 52px;
+  background-image: url("./../img/title-bottom.svg");
+  position: absolute;
+  bottom: -16px;
+  right: -43px;
+
+}
+
+.about__theses {
+  width: 100%;
+  height: 426px;
+  display: flex;
+  box-sizing: border-box;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: space-between;
+
+
+
+}
+
+.about__theses p {
+  width: 480px;
+  height: 87px;
+  /* display: block; */
+
+
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 0.6px;
+  color: var(--text-color)
+}
+
+/* Services */
+.section__services {
+  background-color: #F8F8F8;
+  padding: 200px 0;
+}
+
+.services__content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.services__receive {
+  width: 100%;
+
+  display: flex;
+  column-gap: 74px;
+  flex-direction: row;
+  flex-wrap: nowrap;
+
+}
+
+.service {
+  width: 350px;
+  margin-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+
+}
+
+.service__title {
+  width: 220px;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  letter-spacing: 0.6px;
+  color: var(--text-color);
+  display: flex;
+  align-items: center;
+
+}
+
+.service__title img {
+  margin-right: 10px;
+}
+
+.service p {
+
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 0.6px;
+  display: flex;
+  align-items: flex-end;
+}
+
+/* advantages */
+.services__advantages {
+  width: 100%;
+  height: 157px;
+  display: flex;
+  flex-direction: row;
+
+}
+
+.advantages__left {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+
+.advantage__procent {
+  /* display: flex; */
+}
+
+.advantage__title {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  letter-spacing: 0.6px;
+  color: var(--text-color);
+  display: flex;
+  flex-direction: row;
+
+}
+
+.advantage__title img {
+  margin-right: 10px;
+}
+
+.advantage__procent p {
+  font-weight: 300;
+  font-size: 14px;
+
+}
+
+.advantages__right {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+}
+
+.advantages__right p {
+
+  font-weight: 300;
+  font-size: 14px;
+  letter-spacing: 0.6px;
+}
+
+/* Information */
+
+.section__information {
+  margin: 200px 0;
+  position: relative;
+
+
+}
+
+.information__content {
+  display: flex;
+  width: 45%;
+  height: 650px;
+  flex-direction: column;
+
+}
+
+.information {
+  width: 507px;
+  display: flex;
+  row-gap: 30px;
+  flex-direction: column;
+  font-weight: 300;
+  font-size: 14px;
+  letter-spacing: 0.6px;
+}
+
+.information__img {
+  position: absolute;
+  top: -200px;
+  right: 0px;
+}
+
+/*  galleria */
+.section__galleria {
+  margin: 200px 0;
+}
+
+.galleria__content {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.galleria__list {
+  margin-bottom: 50px;
+  display: flex;
+  column-gap: 20px;
+  flex-direction: row;
+  font-weight: 400;
+  font-size: 24px;
+  letter-spacing: 0.6px;
+}
+
+.galleria__list a {
+  color: var(--text-color);
+
+}
+
+.galleria__list a.active,
+.galleria__list a:hover {
+  color: var(--active-color);
+
+}
+
+.galleria__window {
+  margin-bottom: 50px;
+  display: grid;
+  gap: 40px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+
+
+}
+
+.div1 {
+  grid-area: 1 / 1 / 2 / 3;
+  background-image: url(".././img/galleria/galleria-01.jpg");
+}
+
+.div2 {
+  grid-area: 1 / 3 / 2 / 4;
+  background-image: url(".././img/galleria/galleria-02.jpg");
+}
+
+.div3 {
+  grid-area: 1 / 4 / 2 / 5;
+  background-image: url(".././img/galleria/galleria-03.jpg");
+}
+
+.div4 {
+  grid-area: 2 / 1 / 3 / 2;
+  background-image: url(".././img/galleria/galleria-04.jpg");
+}
+
+.div5 {
+  grid-area: 2 / 2 / 3 / 3;
+  background-image: url(".././img/galleria/galleria-05.jpg");
+}
+
+.div6 {
+  grid-area: 2 / 3 / 3 / 5;
+  background-image: url(".././img/galleria/galleria-06.jpg");
+}
+
+.galleria__window div {
+  background-size: cover;
+  background-position: center;
+  height: 280px;
+}
+
+.galleria__btn {
+  margin: auto;
+  width: 350px;
+  height: 70px;
+  border: 1px solid #C4C4C4;
+
+}
+
+/* Quote */
+.section__quote {
+  background-color: #F8F8F8;
+
+}
+
+.quote__content {
+  display: flex;
+  height: 200px;
+  color: var(--text-color);
+  letter-spacing: 0.6px;
+  font-style: italic;
+  align-items: center;
+  justify-content: center;
+}
+
+.quote__text {
+  font-weight: 400;
+  font-size: 36px;
+  position: relative;
+}
+
+.quote__author {
+  font-weight: 300;
+  font-size: 14px;
+  position: absolute;
+  right: -150px;
+  bottom: -20px;
+
+}
+
+/* Movie */
+
+.roller__content {
+  height: 600px;
+  background-image: url(".././img/section-video.jpg");
+  margin: 200px 0;
+  position: relative;
+}
+
+.roller__content .play__btn {
+  position: absolute;
+  left: 550px;
+  top: 250px;
+}
+
+/*  indicators */
+.indicators__content {
+  display: flex;
+  flex-direction: row;
+  column-gap: 100px;
+  justify-content: center;
+  margin-bottom: 200px;
+}
+
+.indicators__content .indicator__nummber {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 64px;
+  letter-spacing: 0.6px;
+  color: var(--title-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.indicators__content .indicator__nummber p {
+  font-weight: 300;
+  font-size: 14px;
+  color: var(--text-color);
+}
+/* blog */
+.section__blog{
+   position: relative;
+}
+.section__background{
+  
+  position: absolute;
+  top: 200px;
+  left: 0;
+    
+}
+.section__background::before{
+ content: "";
+  width: 1920px;
+  height: 800px;
+
+  background: rgba(36, 33, 33, 0.5);
+
+  position: absolute;
+  left: 0;
+  top: 0;
+
+}
+
+.blog__content{
+  
+  margin-bottom: 200px;
+  display: flex;
+  flex-direction: column;
+  
+}
+.blog__council{
+  position: relative;
+  
+  min-height: 800px;
+  display: flex;
+  flex-direction: column;
+  font-weight: 400;
+  font-size: 48px;
+  color: #FFFFFF;
+  align-items: flex-end;
+  justify-content: center;
+  
+  
+}
+.council{
+  width: 600px;
+height: 117px;
+}
+.council p {
+font-weight: 300;
+font-size: 14px;
+}
+.blog__nav{
+  
+  /* width: 285px; */
+  position: absolute;
+  bottom: 74px;
+  left: 400px;
+  display: flex;
+  column-gap: 15px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+
+
+}
+.blog__nav li{
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: #FFFFFF;
+}
+
+.blog__nav .active,
+.blog__nav li:hover{
+  background-color: var(--active-color);
+}
+/* Team */
+.team__content{
+  margin-bottom: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.cards__team{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  column-gap: 105px;
+}
+.card__person{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.person__data{
+  margin-top: 25px;
+  display: flex;
+  font-size: 18px;
+  font-weight: 700;
+  color: var(--text-color);
+  flex-direction: column;
+  align-items: center;
+
+}
+.person__data p {
+  font-weight: 400;
+font-size: 14px;
+}
+
+/* service packages */
+.section__packages{
+  background-color: #F8F8F8;
+}
+.packages__content{
+  padding: 200px 0;
+  margin-bottom: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+.packages__card{
+  display: flex;
+  width: 100%;
+  
+  flex-direction: row;
+  justify-content: space-between;
+  column-gap: 60px;
+}
+.package__card{
+  background-color: #FFFFFF;
+  width: 360px;
+  height: 577px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+
+}
+.package__title,.package__price {
+  text-transform: uppercase;
+ font-weight: 400;
+font-size: 36px;
+color: var(--title-color);
+
+}
+.package__price{
+  display: flex;
+  align-items: center;
+}
+.package__list{
+  display: flex;
+  height: 300px;
+  flex-direction: column;
+ row-gap: 20px;
+font-weight: 400;
+font-size: 14px;
+color: var(--text-color);
+}
+.package__price span{
+  font-weight: 400;
+font-size: 18px;
+margin-left: 2px;
+}
+/* map */
+.map__content{
+
+  margin: 200px auto ;
+  width: 1473px;
+  height: 640px;
+  background-image: url("../img/map_background.jpg");
+  background-position: center;
+  background-size: cover;
+  position: relative;
+}
+.map__content::before{
+  position: absolute;
+  left: 708px;
+  top: 99px;
+    content: "";
+    background-image: url("../img/index.svg");
+    width: 56.79px;
+    height: 70px;
+    
+}
+/* request */
+.request__content{
+  margin-bottom: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+.request__form{
+  width: 100%;
+  height: 460px;
+  margin-bottom: 200px;
+  display: flex;
+  flex-direction: row;
+
+}
+.form__content{
+  width: 50%;
+    background-color: #ffffff;
+    padding-right: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+}
+.form__content #input--name,
+.form__content #input--number,
+.form__content #textarea { 
+  width: 100%;
+  color: var(--active-color);
+  border: none;
+  border-bottom: 2px solid #DADADA;
+  padding-bottom: 20px;
+  font-weight: 400;
+  font-size: 18px;
+  
+}
+.form__content #input--name::placeholder,
+.form__content #textarea::placeholder,
+.form__content #input--number::placeholder{
+  color: var(--active-color);
+}
+.form__content #input--name{
+  margin-bottom: 32px;
+  
+}
+.form__content #input--number{
+
+  margin-bottom: 53px;
+}
+.form__content #textarea { 
+  resize: none;
+  min-height: 156px;
+  margin-bottom: 73px;
+}
+
+.form--btn {
+ 
+  width: 350px;
+  height: 70px;
+  border: 1px solid #C4C4C4;
+
+}
+
+
+
+
+
+.adress__content{
+  width: 50%;
+  padding: 42px 230px 0 52px;
+  background-color: #F8F8F8;
+  color: var(--text-color);
+
+  font-weight: 400;
+  font-size: 24px;
+
+  display: flex;
+  flex-direction: column;
+  row-gap: 65px;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.request__footer{
+ /* width: 357px; */
+  display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    column-gap: 10px;
+  
+    font-weight: 400;
+    font-size: 24px;
+    text-transform: uppercase;
+  
+  }
+.request__footer li a{
+  color: var(--text-color);
+
+}
+
+.request__footer li a.active,
+.request__footer li a:hover{
+  color: var(--active-color)
+}
+/* Footer */
+.footer__logo{
+  min-height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--active-color);
 }
 
 
